Asset Precompile and Team Page bio-box animation fix

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -44,6 +44,7 @@ team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
 team/manoj.jpg: team/manoj-e347f33f66b2dad178f14132a77f9f1d.jpg
 team/ninad.jpg: team/ninad-15649dae92d606750c8ef2ffa6e8e9ab.jpg
 team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
+team/rishi.jpg: team/rishi-17366a96dbf868f8c655a2702224f071.jpg
 team/sameer.jpg: team/sameer-56e0c1edac1db4977faedfa83ca1542b.jpg
 team/sandip.jpg: team/sandip-cccd1e49c2492b414059d9e5256bbbcf.jpg
 team/sanjiv.jpg: team/sanjiv-30a8c14de889710d349edc3195cfd158.jpg
@@ -55,7 +56,7 @@ team/swapnil.jpg: team/swapnil-8ccf202d2df918be493661f848628829.jpg
 team/trupti.jpg: team/trupti-0dd12ea8ed5200747cacee8d826ed1af.jpg
 train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
-application.js: application-b09c34627222560db962f5fde9211f42.js
+application.js: application-9f4b4bd754354c300e74d75e682ae3c1.js
 application.css: application-4dbd3959bd624f1b5e8b86b9c6b59087.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
