Added team members

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,4 @@
----
+--- 
 70-trans-with-corner.png: 70-trans-with-corner-666c8886a71906833be6a357cd764f31.png
 Josh-Software-Logo.svg: Josh-Software-Logo-9aa3d1bd97a65bcae216522c7e8ad4b4.svg
 dot.png: dot-4119538ff506bba97e505fd3da95fadf.png
@@ -44,9 +44,13 @@ team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
 team/manoj.jpg: team/manoj-e347f33f66b2dad178f14132a77f9f1d.jpg
 team/ninad.jpg: team/ninad-15649dae92d606750c8ef2ffa6e8e9ab.jpg
 team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
+team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
+team/pratik.jpg: team/pratik-b880a87cbfdb88f33cd6881061ae3a3d.jpg
 team/rishi.jpg: team/rishi-17366a96dbf868f8c655a2702224f071.jpg
+team/rohan.jpg: team/rohan-7667f0b38edaf4cd3fac1253841592fe.jpg
 team/sameer.jpg: team/sameer-56e0c1edac1db4977faedfa83ca1542b.jpg
 team/sandip.jpg: team/sandip-cccd1e49c2492b414059d9e5256bbbcf.jpg
+team/sanjeev.jpg: team/sanjeev-791340ccbf7096b2777ac165bc855ee5.jpg
 team/sanjiv.jpg: team/sanjiv-30a8c14de889710d349edc3195cfd158.jpg
 team/satish.jpg: team/satish-eb78e22ad8f65ea1104dd7af50715150.jpg
 team/sethu.jpg: team/sethu-69127afd64bf68aeae6c985b50e7e47f.jpg
