--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -37,11 +37,14 @@ rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 ruby_and_mongodb_book.jpg: ruby_and_mongodb_book-5474e95f9a161b4e4bd4919217259263.jpg
 section-separator.png: section-separator-43a96f412529338f9d113a68d228c35d.png
 team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
+team/anjanikatti.jpg: team/anjanikatti-4221d23b6a04758400d5882488b9ebf5.jpg
+team/anujaware.jpg: team/anujaware-00001e4de732e3c19b6a13581b9bf867.jpg
 team/chintan.jpg: team/chintan-825cc8062d79d2c9ba275b834531d6c4.jpg
 team/gautam.jpg: team/gautam-2b414fc46c1b10569d038a1b36375401.jpg
 team/kapil.jpg: team/kapil-32f189d9c02508f9334c868decedaf0c.jpg
 team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
 team/manoj.jpg: team/manoj-e347f33f66b2dad178f14132a77f9f1d.jpg
+team/meghabrid.jpg: team/meghabrid-28913d6b3d732793ea4d89980212aead.jpg
 team/ninad.jpg: team/ninad-15649dae92d606750c8ef2ffa6e8e9ab.jpg
 team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
 team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
