--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,4 @@
---- 
+---
 70-trans-with-corner.png: 70-trans-with-corner-666c8886a71906833be6a357cd764f31.png
 Josh-Software-Logo.svg: Josh-Software-Logo-9aa3d1bd97a65bcae216522c7e8ad4b4.svg
 dot.png: dot-4119538ff506bba97e505fd3da95fadf.png
@@ -40,6 +40,7 @@ team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
 team/anjanikatti.jpg: team/anjanikatti-4221d23b6a04758400d5882488b9ebf5.jpg
 team/anujaware.jpg: team/anujaware-00001e4de732e3c19b6a13581b9bf867.jpg
 team/chintan.jpg: team/chintan-825cc8062d79d2c9ba275b834531d6c4.jpg
+team/elvinefendi.jpg: team/elvinefendi-9acac7915676874622bb04740601c9da.jpg
 team/gautam.jpg: team/gautam-2b414fc46c1b10569d038a1b36375401.jpg
 team/kapil.jpg: team/kapil-32f189d9c02508f9334c868decedaf0c.jpg
 team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
@@ -63,7 +64,7 @@ team/swapnil.jpg: team/swapnil-8ccf202d2df918be493661f848628829.jpg
 team/trupti.jpg: team/trupti-0dd12ea8ed5200747cacee8d826ed1af.jpg
 train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
-application.js: application-9f4b4bd754354c300e74d75e682ae3c1.js
-application.css: application-4dbd3959bd624f1b5e8b86b9c6b59087.css
+application.js: application-1c18bccb9e54fbbebb13921333322044.js
+application.css: application-6466120014d27c4ba60624a8d94e3cfb.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
