Changed the book image and favico

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -34,7 +34,7 @@ portfolio/joshsoftware_tourconnect.jpg: portfolio/joshsoftware_tourconnect-40d12
 portfolio/si.gif: portfolio/si-aeb066e03f8226b61bffdfdde9edfc78.gif
 portfolio/us.gif: portfolio/us-cb8eaf3cdd5bb31836fdfd1ee654dbad.gif
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-ruby_and_mongodb_book.jpg: ruby_and_mongodb_book-5474e95f9a161b4e4bd4919217259263.jpg
+ruby_and_mongo_db_book.png: ruby_and_mongo_db_book-7aae9cf2855b39042b01a57bb7c4e613.png
 section-separator.png: section-separator-43a96f412529338f9d113a68d228c35d.png
 team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
 team/anjanikatti.jpg: team/anjanikatti-4221d23b6a04758400d5882488b9ebf5.jpg
