Adding apple touch favicon

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,10 @@
 --- 
 70-trans-with-corner.png: 70-trans-with-corner-666c8886a71906833be6a357cd764f31.png
 Josh-Software-Logo.svg: Josh-Software-Logo-9aa3d1bd97a65bcae216522c7e8ad4b4.svg
+apple-touch-icon-114x114-precomposed.png: apple-touch-icon-114x114-precomposed-4b1871af05d1c081349855a852cdc6cb.png
+apple-touch-icon-144x144-precomposed.png: apple-touch-icon-144x144-precomposed-69b0acfd65c48ea57de59853715cb9a4.png
+apple-touch-icon-57x57-precomposed.png: apple-touch-icon-57x57-precomposed-429a298a31094c4f8d688c8a943af64a.png
+apple-touch-icon-72x72-precomposed.png: apple-touch-icon-72x72-precomposed-e625f63b30bfc001a1909a821bc5f936.png
 dot.png: dot-4119538ff506bba97e505fd3da95fadf.png
 glyphicons_088_adress_book.png: glyphicons_088_adress_book-166244f4158ac5053d26e60634738c8d.png
 glyphicons_273_drink.png: glyphicons_273_drink-0fcb48f9b25b13aebbb9b1fe6a68858e.png
