Cleaning of assets

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -50,6 +50,7 @@ team/kapil.jpg: team/kapil-32f189d9c02508f9334c868decedaf0c.jpg
 team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
 team/manoj.jpg: team/manoj-e347f33f66b2dad178f14132a77f9f1d.jpg
 team/meghabrid.jpg: team/meghabrid-28913d6b3d732793ea4d89980212aead.jpg
+team/mohammad.jpg: team/mohammad-36f4a7130f9d20ad05d5a6010a901d52.jpg
 team/ninad.jpg: team/ninad-15649dae92d606750c8ef2ffa6e8e9ab.jpg
 team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
 team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
