--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,10 +1,20 @@
---- 
+---
 70-trans-with-corner.png: 70-trans-with-corner-666c8886a71906833be6a357cd764f31.png
 Josh-Software-Logo.svg: Josh-Software-Logo-9aa3d1bd97a65bcae216522c7e8ad4b4.svg
 apple-touch-icon-114x114-precomposed.png: apple-touch-icon-114x114-precomposed-4b1871af05d1c081349855a852cdc6cb.png
 apple-touch-icon-144x144-precomposed.png: apple-touch-icon-144x144-precomposed-69b0acfd65c48ea57de59853715cb9a4.png
 apple-touch-icon-57x57-precomposed.png: apple-touch-icon-57x57-precomposed-429a298a31094c4f8d688c8a943af64a.png
 apple-touch-icon-72x72-precomposed.png: apple-touch-icon-72x72-precomposed-e625f63b30bfc001a1909a821bc5f936.png
+client_logos/1factory_logo.png: client_logos/1factory_logo-df56580e435c05ca0b30b5ac812a2340.png
+client_logos/6YLogo.gif: client_logos/6YLogo-740ada162b06c8378e820f29890e6a0f.gif
+client_logos/adipa_logo.png: client_logos/adipa_logo-a67a20b9daa98660b3dd8027d151d5dd.png
+client_logos/easy_pep.png: client_logos/easy_pep-0fd924d21c1fc6c387928227c60025b2.png
+client_logos/gullakmaster_logo.png: client_logos/gullakmaster_logo-40bef3094499aa6285e07d27e876bfc4.png
+client_logos/ipalm_online_logo.png: client_logos/ipalm_online_logo-fb2037a86ae6c422677a7c1c314a6cab.png
+client_logos/qwikc_logo.png: client_logos/qwikc_logo-4ccd45071e41dedcf5d0c6ae6eca76de.png
+client_logos/realcloud_logo.jpg: client_logos/realcloud_logo-e10bb00c4c539dde43cbb828f1927968.jpg
+client_logos/skies_logo.jpg: client_logos/skies_logo-965a97e39232ba8d6026f754c4bd9c4d.jpg
+client_logos/tourConnectLogo.png: client_logos/tourConnectLogo-6acb583960284eb6926166e8172ea39e.png
 dot.png: dot-4119538ff506bba97e505fd3da95fadf.png
 glyphicons_088_adress_book.png: glyphicons_088_adress_book-166244f4158ac5053d26e60634738c8d.png
 glyphicons_273_drink.png: glyphicons_273_drink-0fcb48f9b25b13aebbb9b1fe6a68858e.png
@@ -57,6 +67,7 @@ team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
 team/pratik.jpg: team/pratik-b880a87cbfdb88f33cd6881061ae3a3d.jpg
 team/rishi.jpg: team/rishi-17366a96dbf868f8c655a2702224f071.jpg
 team/rohan.jpg: team/rohan-7667f0b38edaf4cd3fac1253841592fe.jpg
+team/sachin.jpg: team/sachin-9ab46e9ca0cc28dab43d8e5c072013c9.jpg
 team/sameer.jpg: team/sameer-56e0c1edac1db4977faedfa83ca1542b.jpg
 team/sandip.jpg: team/sandip-cccd1e49c2492b414059d9e5256bbbcf.jpg
 team/sanjeev.jpg: team/sanjeev-791340ccbf7096b2777ac165bc855ee5.jpg
