Changed background image and font

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -80,7 +80,8 @@ team/swapnil.jpg: team/swapnil-8ccf202d2df918be493661f848628829.jpg
 team/trupti.jpg: team/trupti-0dd12ea8ed5200747cacee8d826ed1af.jpg
 train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
+tunnel.png: tunnel-f93dabf38ec0c641f12a21eedd4ec74e.png
 application.js: application-1c18bccb9e54fbbebb13921333322044.js
-application.css: application-c4d92515c13df999e75cd7a8bccc22e7.css
+application.css: application-cba365af4769f9a9bd1395826618c1fe.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
