Updated team members list

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -51,9 +51,7 @@ rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 ruby_and_mongo_db_book.png: ruby_and_mongo_db_book-7aae9cf2855b39042b01a57bb7c4e613.png
 section-separator.png: section-separator-43a96f412529338f9d113a68d228c35d.png
 team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
-team/anjanikatti.jpg: team/anjanikatti-4221d23b6a04758400d5882488b9ebf5.jpg
 team/anujaware.jpg: team/anujaware-00001e4de732e3c19b6a13581b9bf867.jpg
-team/chintan.jpg: team/chintan-825cc8062d79d2c9ba275b834531d6c4.jpg
 team/elvinefendi.jpg: team/elvinefendi-9acac7915676874622bb04740601c9da.jpg
 team/gautam.jpg: team/gautam-2b414fc46c1b10569d038a1b36375401.jpg
 team/kapil.jpg: team/kapil-32f189d9c02508f9334c868decedaf0c.jpg
@@ -63,21 +61,19 @@ team/meghabrid.jpg: team/meghabrid-28913d6b3d732793ea4d89980212aead.jpg
 team/mohammad.jpg: team/mohammad-36f4a7130f9d20ad05d5a6010a901d52.jpg
 team/ninad.jpg: team/ninad-15649dae92d606750c8ef2ffa6e8e9ab.jpg
 team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
+team/pramod.jpg: team/pramod-5a7ecf0848c804c544f4ee8ba035de30.jpg
 team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
 team/pratik.jpg: team/pratik-b880a87cbfdb88f33cd6881061ae3a3d.jpg
 team/rishi.jpg: team/rishi-17366a96dbf868f8c655a2702224f071.jpg
-team/rohan.jpg: team/rohan-7667f0b38edaf4cd3fac1253841592fe.jpg
 team/sachin.jpg: team/sachin-9ab46e9ca0cc28dab43d8e5c072013c9.jpg
 team/sameer.jpg: team/sameer-56e0c1edac1db4977faedfa83ca1542b.jpg
 team/sandip.jpg: team/sandip-cccd1e49c2492b414059d9e5256bbbcf.jpg
-team/sanjeev.jpg: team/sanjeev-791340ccbf7096b2777ac165bc855ee5.jpg
 team/sanjiv.jpg: team/sanjiv-30a8c14de889710d349edc3195cfd158.jpg
 team/satish.jpg: team/satish-eb78e22ad8f65ea1104dd7af50715150.jpg
 team/sethu.jpg: team/sethu-69127afd64bf68aeae6c985b50e7e47f.jpg
 team/shailesh.jpg: team/shailesh-c597d23e39a08ba4b128788a62a1a32b.jpg
 team/siva.jpg: team/siva-b4d269d999b260aad0b193ab2c118db5.jpg
 team/swapnil.jpg: team/swapnil-8ccf202d2df918be493661f848628829.jpg
-team/trupti.jpg: team/trupti-0dd12ea8ed5200747cacee8d826ed1af.jpg
 train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
 tunnel.png: tunnel-f93dabf38ec0c641f12a21eedd4ec74e.png
