Added Gerson profile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -54,6 +54,7 @@ team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
 team/anujaware.jpg: team/anujaware-00001e4de732e3c19b6a13581b9bf867.jpg
 team/elvinefendi.jpg: team/elvinefendi-9acac7915676874622bb04740601c9da.jpg
 team/gautam.jpg: team/gautam-2b414fc46c1b10569d038a1b36375401.jpg
+team/gerson.jpg: team/gerson-3836d00b73df39025961f40f5b01c69f.jpg
 team/kapil.jpg: team/kapil-32f189d9c02508f9334c868decedaf0c.jpg
 team/kiran.jpg: team/kiran-8e53f51f7f4e09a0978312dd29b43bd3.jpg
 team/manoj.jpg: team/manoj-e347f33f66b2dad178f14132a77f9f1d.jpg
