Added rajan profile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -65,6 +65,7 @@ team/placeholder.gif: team/placeholder-ce5de2cec1f1506355a2c4dba475e553.gif
 team/pramod.jpg: team/pramod-5a7ecf0848c804c544f4ee8ba035de30.jpg
 team/prasad.jpg: team/prasad-8cd915ac41bd6c1610d9ec09f1fb6cfd.jpg
 team/pratik.jpg: team/pratik-b880a87cbfdb88f33cd6881061ae3a3d.jpg
+team/rajan.jpg: team/rajan-78204c34c542c4f6ba15dda9e4390b21.jpg
 team/rishi.jpg: team/rishi-17366a96dbf868f8c655a2702224f071.jpg
 team/sachin.jpg: team/sachin-9ab46e9ca0cc28dab43d8e5c072013c9.jpg
 team/sameer.jpg: team/sameer-56e0c1edac1db4977faedfa83ca1542b.jpg
