added Aditya's profile

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -50,6 +50,7 @@ portfolio/us.gif: portfolio/us-cb8eaf3cdd5bb31836fdfd1ee654dbad.gif
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 ruby_and_mongo_db_book.png: ruby_and_mongo_db_book-7aae9cf2855b39042b01a57bb7c4e613.png
 section-separator.png: section-separator-43a96f412529338f9d113a68d228c35d.png
+team/aditya.jpg: team/aditya-764fe90d743469da7b0c23186785d5d2.jpg
 team/anil.jpg: team/anil-fdde9d4604910eb924ee7e791e98bb7b.jpg
 team/anujaware.jpg: team/anujaware-00001e4de732e3c19b6a13581b9bf867.jpg
 team/elvinefendi.jpg: team/elvinefendi-9acac7915676874622bb04740601c9da.jpg
