Updated home page and portfolio page

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -41,9 +41,11 @@ portfolio/joshsoftware_1factory.jpg: portfolio/joshsoftware_1factory-43eef944861
 portfolio/joshsoftware_brand_potion.jpg: portfolio/joshsoftware_brand_potion-c6f90f50f8c6e103474dfdab3c128a7a.jpg
 portfolio/joshsoftware_clear-trip.jpg: portfolio/joshsoftware_clear-trip-3a19e8af78f1239d7a1cff6ad1018d22.jpg
 portfolio/joshsoftware_deal-pages.jpg: portfolio/joshsoftware_deal-pages-ff1934a44d576b00d224f4b98eb5de57.jpg
+portfolio/joshsoftware_educade.jpg: portfolio/joshsoftware_educade-9e6a65c3f3482d80b77e672f59704493.jpg
 portfolio/joshsoftware_groupgyaan.jpg: portfolio/joshsoftware_groupgyaan-625a7ba5053151e2fc3d5e8896470ca0.jpg
 portfolio/joshsoftware_ipalm.jpg: portfolio/joshsoftware_ipalm-b8dce475afaf122fae8b691c2023666e.jpg
 portfolio/joshsoftware_moveme.jpg: portfolio/joshsoftware_moveme-d64fdf150b7b6299c53c3980d7f6676c.jpg
+portfolio/joshsoftware_shopgodt.jpg: portfolio/joshsoftware_shopgodt-860c6d9c65e10c5057b1cbff547bff57.jpg
 portfolio/joshsoftware_tourconnect.jpg: portfolio/joshsoftware_tourconnect-40d127eedc82a6667e2978ea9bf4e6a7.jpg
 portfolio/si.gif: portfolio/si-aeb066e03f8226b61bffdfdde9edfc78.gif
 portfolio/us.gif: portfolio/us-cb8eaf3cdd5bb31836fdfd1ee654dbad.gif
@@ -81,6 +83,6 @@ train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
 tunnel.png: tunnel-f93dabf38ec0c641f12a21eedd4ec74e.png
 application.js: application-1c18bccb9e54fbbebb13921333322044.js
-application.css: application-cba365af4769f9a9bd1395826618c1fe.css
+application.css: application-e7e425c47156371a81d47e6140a3a313.css
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
