Asset precompiled for Siva's profile update

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -80,7 +80,7 @@ team/sanjiv.jpg: team/sanjiv-30a8c14de889710d349edc3195cfd158.jpg
 team/satish.jpg: team/satish-eb78e22ad8f65ea1104dd7af50715150.jpg
 team/sethu.jpg: team/sethu-69127afd64bf68aeae6c985b50e7e47f.jpg
 team/shailesh.jpg: team/shailesh-c597d23e39a08ba4b128788a62a1a32b.jpg
-team/siva.jpg: team/siva-b4d269d999b260aad0b193ab2c118db5.jpg
+team/siva_gollapalli.jpg: team/siva_gollapalli-646389ba9ae7af3fd0bf0ccf37fb30cb.jpg
 team/swapnil.jpg: team/swapnil-8ccf202d2df918be493661f848628829.jpg
 train.jpg: train-4902a3520a1372a571705b7bc3142837.jpg
 tunnel.jpg: tunnel-339b2007e05d7292b96d7edbbc3fd89a.jpg
