--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   ],
   "dependencies": {
+    "animate.css": "^3.6.1",
     "bootstrap": "^4.1.1",
     "express": "^4.13.3",
     "jquery": "^3.3.1",
