--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^4.1.1",
     "express": "^4.13.3",
     "jquery": "^3.3.1",
+    "jquery-scrollify": "^1.0.19",
     "popper.js": "^1.14.3",
     "sass-flex-mixin": "^1.0.3",
     "sass-rem": "^2.0.1",
