--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0",
     "reactstrap": "^8.0.1",
     "sass-flex-mixin": "^1.0.3",
     "sass-rem": "^2.0.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
