--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-recaptcha": "^2.0.0-rc.1",
     "react-media": "^1.9.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
