--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
+    "react-svg": "^10.0.19",
     "reactstrap": "^8.0.1",
     "sass-flex-mixin": "^1.0.3",
     "sass-rem": "^2.0.1",
