--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.11",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.7.0",
     "react-google-recaptcha": "^2.0.0-rc.1",
     "react-media": "^1.9.2",
     "react-router-dom": "^5.0.1",
