--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,20 @@
 # http://editorconfig.org
-root = true
+# root = true
 
-[*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+# [*]
+# indent_style = space
+# indent_size = 2
+# end_of_line = lf
+# charset = utf-8
+# trim_trailing_whitespace = true
+# insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+# [*.md]
+# trim_trailing_whitespace = false
 
-[Makefile]
-indent_style = tab
-indent_size = 4
+# [Makefile]
+# indent_style = tab
+# indent_size = 4
 
-[*.{php, blade.php}]
-indent_size = 4
+# [*.{php, blade.php}]
+# indent_size = 4
