--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "dompurify": "^1.0.11",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.11",
@@ -20,6 +21,7 @@
     "react-slick": "^0.24.0",
     "react-svg": "^10.0.19",
     "reactstrap": "^8.0.1",
+    "sass": "^1.51.0",
     "sass-flex-mixin": "^1.0.3",
     "sass-rem": "^2.0.1",
     "slick-carousel": "^1.8.1",
